Correct the order and remove extra func
