# product_server/swagger/swagger.yaml
@@ -22,6 +22,36 @@ paths:
         schema:
           type: integer
           format: int64
+          example: 10
+      - name: brand_name
+        in: query
+        description: Filter the products using brand name
+        required: false
+        style: form
+        explode: false
+        schema:
+          type: string
+          example: "Tommy"
+      - name: skip
+        in: query
+        description: Specify the number of products to be skipped
+        required: false
+        style: form
+        explode: false
+        schema:
+          type: integer
+          format: int64
+          example: 2
+      - name: limit
+        in: query
+        description: Specify the number of products to be shown
+        required: false
+        style: form
+        explode: false
+        schema:
+          type: integer
+          format: int64
+          example: 9
       responses:
         "200":
           description: successful operation
@@ -57,6 +87,7 @@ paths:
         schema:
           type: integer
           format: int64
+          example: 2
       responses:
         "200":
           description: successful operation
@@ -71,69 +102,6 @@ paths:
           description: Invalid ID supplied
         "404":
           description: Product not found
-      security:
-      - basicAuth: []
-      x-openapi-router-controller: product_server.controllers.product_controller
-    post:
-      tags:
-      - product
-      summary: Updates a product in the store
-      description: ""
-      operationId: update_product
-      parameters:
-      - name: productId
-        in: path
-        description: ID of product that needs to be updated
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
-      - name: sku
-        in: query
-        description: Stock Keeping Unit of product that needs to be updated
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: title
-        in: query
-        description: Title of product that needs to be updated
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: brand
-        in: query
-        description: Brand of product that needs to be updated
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: slug
-        in: query
-        description: Slug of product that needs to be updated
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: quantity
-        in: query
-        description: Quantity of product that needs to be updated
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "405":
-          description: Invalid input
       security:
       - basicAuth: []
       x-openapi-router-controller: product_server.controllers.product_controller
@@ -180,12 +148,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Product'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Product'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Product'
         required: true
       responses:
         "200":
@@ -206,9 +168,7 @@ components:
   schemas:
     Product:
       required:
-      - name
-      - photoUrls
-      type: object
+      - id
       properties:
         id:
           type: integer
@@ -217,15 +177,15 @@ components:
         sku:
           type: string
           example: "2842534"
-        title:
-          type: string
-          example: Tommy
         brand:
           type: string
-          example: high-split-solid-shirt
+          example: "Tommy"
         slug:
           type: string
-          example: High split shirt
+          example: "high-split-solid-shirt"
+        title:
+          type: string
+          example: "High split shirt"
         quantity:
           type: integer
           format: int64
@@ -234,9 +194,9 @@ components:
         quantity: 1
         id: 1
         sku: "2842534"
-        title: Tommy
-        brand: high-split-solid-shirt
-        slug: High split shirt
+        brand: "Tommy"
+        slug: "high-split-solid-shirt"
+        title: "High split shirt"
       xml:
         name: product
   securitySchemes:
